# UAssetAPI-DNNE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  UAssetAPI-DNNE.sln
.github/: dependabot.yml
.github/workflows/: cmake-build.yml  dotnet-build.yml
UAssetAPI-DNNE/: Class1.cs  Exports.cs  UAssetAPI-DNNE.csproj  packages.lock.json
UAssetAPI-DNNE.CodeGen/: Directory.Build.props  Program.cs  UAssetAPI-DNNE.CodeGen.csproj
UAssetAPI-DNNE/src/c/: CMakeLists.txt
UAssetAPI-DNNE/src/c/uassetapi_dnne/: result.c  result.h
UAssetAPI-DNNE/src/c/uassetapi_dnne/result/: result.c  result.h
UAssetAPI-DNNE/src/templates/: EngineVersion.liquid
cmake/: copy_deps_dlls.cmake
